resources/k8s-resources/temorary-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: temp-deployment
  namespace: private-resources
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app-blue
  template:
    metadata:
      labels:
        app: app-blue
    spec:
      containers:
        - name: app
          image: nginx
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: temp-service
  namespace: private-resources
spec:
  selector:
    app: app-blue
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
