resources/k8s-resources/temp-service2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: temp2-deployment
  namespace: public-resources
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-red
  template:
    metadata:
      labels:
        app: app-red
    spec:
      containers:
        - name: app
          image: caddy
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: temp2-service
  namespace: public-resources
spec:
  selector:
    app: app-red
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
