resources/k8s-resources/temp3.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: temp3-deployment
  namespace: public-resources
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-green
  template:
    metadata:
      labels:
        app: app-green
    spec:
      containers:
        - name: app
          image: httpd
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: temp3-service
  namespace: public-resources
spec:
  selector:
    app: app-green
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
