resources/k8s-resources/private-ingress-resource.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: private-ingress
  namespace: private-resources
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx-internal
  rules:
  - http:
      paths:
      - backend:
          service:
            name: temp-service
            port:
              number: 80 
        path: /
        pathType: Prefix
      - backend:
          service:
            name: temp-service
            port:
              number: 80 
        path: /demo
        pathType: Prefix
