resources/k8s-resources/public-ingress-resource.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: public-ingress
  namespace: public-resources
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx-public
  rules:
    - http:
        paths:
          - backend:
              service:
                name: public-jenkins
                port:
                  number: 80
            path: /jenkins
            pathType: Prefix
          - backend:
              service:
                name: public-nginx
                port:
                  number: 80
            path: /nginx
            pathType: Prefix
          - backend:
              service:
                name: public-caddy
                port:
                  number: 80
            path: /caddy
            pathType: Prefix
